--- a/application/src/ui/imgs/resource.qrc
+++ b/application/src/ui/imgs/resource.qrc
@@ -1,5 +1,10 @@
 <RCC>
   <qresource prefix="root">
+    <file>icons/minus.svg</file>
+    <file>icons/plus.svg</file>
+    <file>icons/Vector.svg</file>
+    <file>icons/x.svg</file>
+    <file>icons/bars-solid-full.svg</file>
     <file>icons/bell.svg</file>
     <file>icons/credit-card.svg</file>
     <file>icons/list.svg</file>
