--- a/application/src/ui/imgs/resource.qrc
+++ b/application/src/ui/imgs/resource.qrc
@@ -1,5 +1,10 @@
 <RCC>
   <qresource prefix="root">
+    <file>icons/next.svg</file>
+    <file>icons/prev.svg</file>
+    <file>icons/sliders.svg</file>
+    <file>icons/file-text.svg</file>
+    <file>icons/edit.svg</file>
     <file>icons/minus.svg</file>
     <file>icons/plus.svg</file>
     <file>icons/Vector.svg</file>
